# vitess

./: .gitignore  BUILD  WORKSPACE  bazel_bootstrap.sh  bootstrap.sh  dev.env  flame_graph_vtgate_low_traffic.html  go.mod  go.sum  tools.go  vtgate_cpu_load_test.html  vtgate_cpu_more_read_traffic.html
bazel/: BUILD  govendor_to_bazel.py
docker/bootstrap/: Dockerfile.common
go/cgzip/: adler32.go
go/sqltypes/: proto3_test.go
go/testfiles/: BUILD.bazel  locate.go  ports.go
go/vt/env/: env.go
go/vt/logutil/: console_logger_test.go
go/vt/mysqlctl/: mycnf_test.go  mysqld.go
go/vt/proto/automation/: automation.pb.go
go/vt/proto/automationservice/: automationservice.pb.go
go/vt/proto/binlogdata/: binlogdata.pb.go
go/vt/proto/binlogservice/: binlogservice.pb.go
go/vt/proto/logutil/: logutil.pb.go
go/vt/proto/mysqlctl/: mysqlctl.pb.go
go/vt/proto/query/: query.pb.go
go/vt/proto/replicationdata/: replicationdata.pb.go
go/vt/proto/tableacl/: tableacl.pb.go
go/vt/proto/tabletmanagerdata/: tabletmanagerdata.pb.go
go/vt/proto/tabletmanagerservice/: tabletmanagerservice.pb.go
go/vt/proto/throttlerdata/: throttlerdata.pb.go
go/vt/proto/throttlerservice/: throttlerservice.pb.go
go/vt/servenv/: BUILD.bazel  buildinfo.go
go/vt/vterrors/: grpc.go  proto3.go  proto3_test.go
go/vt/wrangler/: schema.go
go/vt/zkctl/: zkctl.go  zkctl_test.go
proto/: automation.proto  automationservice.proto  binlogdata.proto  binlogservice.proto  logutil.proto  mysqlctl.proto  query.proto  replicationdata.proto  tableacl.proto  tabletmanagerdata.proto  tabletmanagerservice.proto  throttlerdata.proto  throttlerservice.proto  topodata.proto  vschema.proto  vtctldata.proto  vtctlservice.proto  vtgate.proto  vtgateservice.proto  vtrpc.proto  vttest.proto  vtworkerdata.proto  vtworkerservice.proto  workflow.proto
py/vtproto/: vtrpc_pb2.py
scripts/: Dockerfile.unittests  bootstrap_and_run_unit_tests_from_within_docker.sh  build_docker_and_run_unit_tests.sh  make_protos.sh  run_integration_tests_docker.sh  workspace_status.sh
test/: backup.py  initial_sharding_multi.py  xtrabackup_xtra.py
(+17 files in other folders)
