load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "buildinfo.go",
        "flush_logutil.go",
        "flushlogs.go",
        "grpc_auth.go",
        "grpc_server.go",
        "grpc_server_auth_static.go",
        "jquery.go",
        "pid_file.go",
        "pprof.go",
        "purgelogs.go",
        "rpc_utils.go",
        "run.go",
        "servenv.go",
        "service_map.go",
        "status.go",
        "unix_socket.go",
    ],
    importpath = "vitess.io/vitess/go/vt/servenv",
    visibility = ["//visibility:public"],
    x_defs = {
        # Use --workspace_status_command=./scripts/workspace_status.sh in your bazel
        # command to make sure these are all set.
        "buildTime": "{BUILD_TIMESTAMP}",
        "buildHost": "{BUILD_HOST}",
        "buildUser": "{BUILD_USER}",
        "buildGitRev": "{GIT_REVISION}",
        "buildGitBranch": "{GIT_BRANCH}",
    },
    deps = [
        "//go/acl:go_default_library",
        "//go/event:go_default_library",
        "//go/flagutil:go_default_library",
        "//go/netutil:go_default_library",
        "//go/proc:go_default_library",
        "//go/stats:go_default_library",
        "//go/tb:go_default_library",
        "//go/vt/grpccommon:go_default_library",
        "//go/vt/log:go_default_library",
        "//go/vt/logutil:go_default_library",
        "//go/vt/vttls:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//keepalive:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "servenv_test.go",
        "status_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//go/event:go_default_library"],
)
